--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,54 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import "tailwindcss";
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@custom-variant dark (&:where(.dark, .dark *));
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+/* ===== SHOPPE LIGHT THEME ===== */
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+/* @theme .dark{
+  --color-primary: #0f766e;
+  --color-secondary: #2563eb;
+  --color-accent: #f59e0b;
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  --color-bg: #f8fafc;
+  --color-surface: #ffffff;
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+  --color-text: #0f172a;
+  --color-muted: #64748b;
+  --color-border: #e2e8f0;
+} */
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+@theme{
+     --breakpoint-xs: "420px";   
+     --breakpoint-sm: "640px";
+     --breakpoint-md: "768px";
+      --breakpoint-lg: "1024px";
+      --breakpoint-xl: "1280px";
+}
+/* ===== SHOPPE DARK THEME ===== */
+@theme {
+
+  /* dark theme colors */
+
+  --color-dark-primary: #2dd4bf;
+  --color-dark-secondary: #60a5fa;
+  --color-dark-accent: #fbbf24;
+  --color-dark-bg: #020617;
+  --color-dark-surface: #020617;
+  --color-dark-text: #e5e7eb;
+  --color-dark-muted: #94a3b8;
+  --color-dark-border: #1e293b;
+
+  /* light theme colors */
+  --color-light-primary: #2dd4bf;
+  --color-light-secondary: #60a5fa;
+  --color-light-accent: #fbbf24;
+  --color-light-bg: #ffffff;
+  --color-light-surface: #f8fafc;
+  --color-light-text: #1e293b;
+  --color-light-muted: #64748b;
+  --color-light-border: #e2e8f0;
+  
+
 }
